# udns

./: .gitignore  BUILD.gn  Makefile  Makefile.in  NEWS  TODO  config.h  dnsget.c  ex-dig.c  ex-rdns.c  getopt.c  inet_XtoX.c  platform.h  rblcheck.c  udns.3  udns.h  udns_XtoX.c  udns_bl.c  udns_codes.c  udns_dn.c  udns_dntosp.c  udns_init.c  udns_jran.c  udns_misc.c  udns_parse.c  udns_resolver.c  udns_rr_a.c  udns_rr_mx.c  udns_rr_naptr.c  udns_rr_ptr.c  udns_rr_srv.c  udns_rr_txt.c
debian/: changelog  rules
projects/android/: Android.mk  build_udns_android.sh
projects/android/jni/: Application.mk
projects/linux/codelite/udns/: udns.project
projects/msvs/: udns.sln
projects/msvs/udns.Universal/: udns.vcxproj  udns.vcxproj.filters
projects/msvs/udns.Win32/: ReadMe.txt  udns.vcxproj  udns.vcxproj.filters
projects/msvs/udns/udns.Shared/: udns.Shared.vcxitems
projects/msvs/udns/udns.Windows/: udns.Windows.vcxproj
projects/msvs/udns/udns.Windows.Universal/: udns.Windows.Universal.vcxproj
projects/msvs/udns/udns.WindowsPhone/: udns.WindowsPhone.vcxproj
projects/vs2013/udns/: udns.sln
projects/vs2013/udns/udns.Shared/: udns.Shared.vcxitems.filters
projects/vs2013/udns/udns.Win32/: udns.Win32.vcxproj
projects/vs2013/udns/udns.Windows.Universal/: udns.Windows.Universal.vcxproj
projects/vs2013/udns/udns.WindowsPhone/: udns.WindowsPhone.vcxproj
projects/vs2013/udns/udns/udns.Shared/: udns.Shared.vcxitems  udns.Shared.vcxitems.filters
projects/vs2013/udns/udns/udns.Windows/: udns.Windows.vcxproj  udns.Windows.vcxproj.filters
projects/xcode/udns-ios/udns-ios.xcodeproj/: project.pbxproj
projects/xcode/udns-ios/udns-ios.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/xcode/udns-osx/udns-osx.xcodeproj/: project.pbxproj
projects/xcode/udns-osx/udns-osx.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/xcode/udns/udns.xcodeproj/: project.pbxproj
projects/xcode/udns_ios/udns_ios.xcodeproj/: project.pbxproj
