# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

config("udns_config") {

    cflags = [ "/WX-" ]
    
}

static_library("udns") {

  configs += [ ":udns_config" ]
  
  
  sources = [
    "config.h",
    "dnsget.c",
    "ex-rdns.c",
    "getopt.c",
    "inet_XtoX.c",
    "platform.h",
    "rblcheck.c",
    "udns.h",
    "udns_bl.c",
    "udns_codes.c",
    "udns_dn.c",
    "udns_dntosp.c",
    "udns_init.c",
    "udns_jran.c",
    "udns_misc.c",
    "udns_parse.c",
    "udns_resolver.c",
    "udns_rr_a.c",
    "udns_rr_mx.c",
    "udns_rr_naptr.c",
    "udns_rr_ptr.c",
    "udns_rr_srv.c",
    "udns_rr_txt.c",
    "udns_XtoX.c",
  ]

  defines = [
    "UDNS_WINRT",
    "_UNICODE",
    "UNICODE",
  ]

}
