# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

if  (is_android) {
  import("//build/config/android/rules.gni")
  import("//build/config/android/config.gni")
}

config("udns_config") {
    if  (is_win) {
#        cflags = [ "/WX-" ]
    }

    if  (is_android) {
      cflags = [  "-Wall",
                  "-W",
                  "-O2",
                  "-pipe",
                  "-fPIC",
                  "-Wno-unused-parameter",]
      cflags_cc = [
            "-Wall",
            "-std=c++11",
        ]
    }
}

static_library("udns") {

  configs += [ ":udns_config" ]
  
  
  sources = [
    "config.h",
    "platform.h",
    "udns.h",
    "udns_bl.c",
    "udns_codes.c",
    "udns_dn.c",
    "udns_dntosp.c",
    "udns_init.c",
    "udns_jran.c",
    "udns_misc.c",
    "udns_parse.c",
    "udns_resolver.c",
    "udns_rr_a.c",
    "udns_rr_mx.c",
    "udns_rr_naptr.c",
    "udns_rr_ptr.c",
    "udns_rr_srv.c",
    "udns_rr_txt.c",
    "udns_XtoX.c",
  ]

  defines = [
    "_UNICODE",
    "UNICODE",
  ]

  if  (is_win) {
    defines += [ "UDNS_WINUWP" ]
  }

  if (is_android) {
    sources -= [ "config.h",
                 "platform.h",
                 "udns.h",]

    sources += [ "dnsget.c",
                 "getopt.c",
                 "inet_XtoX.c",
                 ]

    include_dirs = [ 
                    ".",
                    "$android_ndk_root/sources/android/support/include",
                    "$android_ndk_root/sources/cxx-stl/llvm-libc++/libcxx/include",
                    "$android_ndk_root/platforms/android-16/arch-arm/usr/include", ]

     defines += [ "D_ANDROID",
                  "DHAVE_CONFIG_H",]
  }
}
